--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.4.0",
     "@ckeditor/ckeditor5-react": "^1.1.3",
+    "axios": "^0.19.0",
     "html-react-parser": "^0.9.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
