--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
     "html-react-parser": "^0.9.1",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "style-loader": "^1.0.0",
+    "webpack-cli": "^3.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
