--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^12.4.0",
+    "@ckeditor/ckeditor5-build-classic": "guilhermenunes09/ckeditor5-build-classic",
     "@ckeditor/ckeditor5-react": "^1.1.3",
     "axios": "^0.19.0",
     "html-react-parser": "^0.9.1",
