--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "style-loader": "^1.0.0",
